jS-Strict-Mode/Examples/example6.js
// Deleting a variable (or object) is not allowed.
"use strict";
let x = 3.14;
// delete x; // Removing comment from this statement will result in below mentioned Error.
// SyntaxError: Delete of an unqualified identifier in strict mode.